fix: clear up missing dark mode and incorrect merge

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -69,6 +69,10 @@
       background: #171725;
       border-radius: 5px;
     }
+
+    body {
+      background-color: #171725;
+    }
   }
   
 
